lr_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: liferay
  name: liferay
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: liferay

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: liferay
  name: liferay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liferay
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: liferay
    spec:
       ## Uncomment this to add a check to the deployment that waits for the DB to be ready
#      initContainers:
#      - name: init-wait
#        image: alpine
#        command: ["sh", "-c", "for i in $(seq 1 300); do nc -zvw1 mysql 3306 && exit 0 || sleep 3; done; exit 1"]
      securityContext:
        fsGroup: 1000
      containers:
      - env: 
        - name: LIFERAY_JAVA_OPTS 
          value: -Xms2g -Xmx2g
        image: liferay/dxp:7.3.10-dxp-3
        resources:
          limits:
            memory: "4098Mi"
            cpu: "2"
        name: liferay 
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /opt/liferay/data
          name: data
        - mountPath: /mnt/liferay
          name: config
        - mountPath: /mnt/liferay/files/portal-ext.properties
          name: portext
          subPath: portal-ext.properties
        - mountPath: /opt/liferay/osgi/configs/com.liferay.portal.search.elasticsearch7.configuration.ElasticsearchConfiguration.config
          name: elasticsearch
          subPath: com.liferay.portal.search.elasticsearch7.configuration.ElasticsearchConfiguration.config
      restartPolicy: Always
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: liferay-data
      - name: config
        persistentVolumeClaim:
          claimName: liferay-config
      - name: portext
        configMap:
          name: liferay-portext
          items:
          - key: "portal-ext.properties"
            path: "portal-ext.properties"
      - name: elasticsearch
        configMap:
          name: es-config
          items:
          - key: "es.properties"
            path: "com.liferay.portal.search.elasticsearch7.configuration.ElasticsearchConfiguration.config"
