ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: liferay
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/32
spec:
  rules:
  - http:
      paths:
      - backend:
          service: 
            name: liferay
            port: 
              number: 8080
        path: /
        pathType: Prefix
